# panoptic_part_segmentation

./: README.md  main.py  pyproject.toml
3D_Scene_Graph.egg-info/: PKG-INFO  SOURCES.txt
material/: example.json
src/: SceneGraph.py
src/3D_Scene_Graph.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
